# cargo-maintained

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: conventional-commits.yml  dependabot-auto-merge.yml  dependabot.yml  release-plz.yml  rust.yml
src/: main.rs
tests/: integration_tests.rs
