[package]
name = "cargo-maintained"
version = "0.1.0"
edition = "2024"
description = "A tool to check crates are up to date."
license = "Apache-2.0"

repository = "https://github.com/JonathanWoollett-Light/cargo-maintained"
documentation = "https://docs.rs/cargo-maintained/"
readme = "README.md"

[dependencies]
cargo_metadata = "0.21.0"
crates_io_api = "0.11.0"
semver = "1.0.26"
ansi_term = "0.12.1"
clap = { version = "4.5.41", features = ["derive"] }
indicatif = "0.18.0"