[package]
name = "cargo-maintained"
version = "0.3.0"
edition = "2024"
description = "A tool to check crates are up to date."
license = "Apache-2.0"

authors = [
    "Jonathan Woollett-Light <jonathanwoollettlight@proton.me>",
]
categories = [
    "development-tools",
    "development-tools::cargo-plugins"
]
keywords = [
    "cargo",
    "subcommand",
    "dependencies",
    "cargo-subcommand",
    "deps",
]

repository = "https://github.com/JonathanWoollett-Light/cargo-maintained"
readme = "README.md"

[dependencies]
cargo_metadata = "0.21.0"
crates_io_api = "0.12.0"
semver = "1.0.26"
clap = { version = "4.5.45", features = ["derive"] }
indicatif = "0.18.0"
